unpackaged/main/default/objects/NPS_Survey__c/NPS_Survey__c.object-meta.xml
<CustomObject>
    <label>NPS Survey</label>
    <nameField>
        <label>NPS Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>