unpackaged/main/default/objects/NPS_Survey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPS Surveys</relationshipLabel>
    <relationshipName>NPS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>