unpackaged/main/default/objects/NPS_Survey__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <formula>IF(Net_Promoter_Score__c &lt; 7, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>