unpackaged/main/default/objects/NPS_Survey__c/fields/Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score__c</fullName>
    <label>Net Promoter Score</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>