unpackaged/main/default/objects/NPS_Survey__c/fields/NPS_grouping__c.field-meta.xml
<CustomField>
    <fullName>NPS_grouping__c</fullName>
    <formula>IF(Net_Promoter_Score__c &gt; 8, 'Promoter',IF(AND(Net_Promoter_Score__c &gt; 6, Net_Promoter_Score__c &lt; 9),'Passive',IF(Net_Promoter_Score__c &lt; 7, 'Detractor','No Score')))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS grouping</label>
    <type>Text</type>
</CustomField>