unpackaged/main/default/objects/NPS_Survey__c/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <formula>IF(AND(Net_Promoter_Score__c &gt; 6, Net_Promoter_Score__c &lt; 9), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>